# evolved_latent

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/: ISSUE_TEMPLATE.md
configs/: evolved_latent.yaml
docs/: conf.py  index.rst  installation.rst  usage.rst
evolved_latent/: __init__.py  cli.py
evolved_latent/networks/: __init__.py  autoencoder.py  autoencoder_1d_baseline.py  autoencoder_1d_vae.py  autoencoder_1d_vqvae.py  autoencoder_resnet.py  baseline_autoencoder.py  common_blocks.py  evo_ae_latent.py  evolved_autoencoder.py  evolved_latent_transformer.py  evolved_net.py  res_attn_autoencoder.py  res_attn_qk_autoencoder.py  resnet_autoencoder.py  resnet_norm_autoencoder.py  seq2seq_transformer.py  vector_quantizer.py
evolved_latent/trainer/: autoencoder_trainer.py  baseline_autoencoder_trainer.py  evolved_autoencoder_trainer.py  trainer_module.py
evolved_latent/trainers/: __init__.py  autoencoder_trainer.py  evaluator.py  evolved_latent_trainer.py  seq2seq_trainer.py  trainer_module.py  vae_trainer.py  vqvae_trainer.py
evolved_latent/utils/: callback.py  dataloader.py  pytorch_utils.py  trainer_module.py  utils.py  vtk_reader.py
results/: results.txt
tests/: __init__.py  test_evolved_latent.py
